crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_composite_view_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.54",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ]
      },
      "primary_key": {
        "id": 468,
        "question": "How many multiples of 4 are there between 1 and 30? List them and count the total."
      }
    },
    {
      "_score": "0.54",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]"
        ]
      },
      "primary_key": {
        "id": 189,
        "question": "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\)."
      }
    },
    {
      "_score": "0.54",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277,
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      }
    },
    {
      "_score": "0.53",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 948,
        "question": "What is the fifth root of 32?"
      }
    }
  ]
}
